<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultDisp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="ExtraText,UselessParent">

        <TextView
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/test"
            android:textSize="30sp" />

        <Space
            android:layout_width="263dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/PrintedResults"
            android:layout_width="263dp"
            android:layout_height="100dp"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="326dp" />

        <Space
            android:layout_width="263dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/ItName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="11"
            android:hint="@string/item_name"
            android:inputType="text"
            android:autofillHints="Put data here" />

        <EditText
            android:id="@+id/SerSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="11"
            android:hint="@string/serving_size"
            android:inputType="text"
            android:autofillHints="Put data here"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/CalServing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="11"
            android:hint="@string/calories_per_serving"
            android:inputType="numberSigned"
            android:autofillHints="Put data here" />

        <Space
            android:layout_width="263dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:text="@string/generate_record"
            android:layout_height="90dp"
            android:textSize="20sp"
            android:textAllCaps="false" />

    </LinearLayout>


</RelativeLayout>