<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <TextView
            android:id="@+id/ActivityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="22pt"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:id="@+id/TEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ActivityTitle"
            android:layout_marginTop="50dp"
            android:autofillHints="Click to Speak"
            android:inputType="text"
            android:labelFor="@+id/TEdit"
            android:minHeight="48dp" />


        <ImageView
            android:id="@+id/buttonMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/TEdit"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/Mic"
            android:background="?selectableItemBackground"
            android:src="@drawable/micpic"
            />

        <TextView
            android:id="@+id/Instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonMic"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/click_to_speak"
            android:textSize="20pt"

            />

        <Button
            android:id="@+id/HomeButton"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Instruction"
            android:text="@string/MainMenuStr"
            android:textSize="15pt"
            />

</RelativeLayout>